--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
     </head>
     <body>
         <h1>Emilia Devis - Entrega 1 </h1>
+        <div id="colorBox" style="width: 200px; height: 200px; background-color: lightgray;"></div>
+    <button id="startColorChange">Iniciar cambio de colores</button>
+    <button id="startInteraction">Iniciar interacción</button>
+    
     </body>
 </html>
