--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewsport" content="width=device-width, initial-scale=1.0">
-        <script defer src="./JS/main.js"></script>
-        <title> Emilia Devis </title>
+        <script src="./JS/main.js"></script>
+        <title>Simulador de moneda extrajeras</title>
     </head>
     <body>
-        <h1>Emilia Devis - Entrega 1 </h1>
-        <div id="colorBox" style="width: 200px; height: 200px; background-color: lightgray;"></div>
-    <button id="startColorChange">Iniciar cambio de colores</button>
-    <button id="startInteraction">Iniciar interacción</button>
-    
+        <h1>Bienvenido a la tienda convertidora</h1>
+        <p>Interactúa con el simulador a través de los carteles emergentes.</p>
+        <button onclick="iniciarSimulador()">Iniciar Simulador de E-commerce</button>
     </body>
+   
 </html>
