--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewsport" content="width=device-width, initial-scale=1.0">
-        <script src="./JS/main.js"></script>
-        <title>Simulador de moneda extrajeras</title>
-    </head>
-    <body>
-        <h1>Bienvenido a la tienda convertidora</h1>
-        <p>Interactúa con el simulador a través de los carteles emergentes.</p>
-        <button onclick="iniciarSimulador()">Iniciar Simulador de E-commerce</button>
-    </body>
-   
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Simulador de E-commerce</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>Simulador de E-commerce</h1>
+  </header>
+  <main>
+    <section id="productos"></section>
+    <section id="carrito"></section>
+    <section id="conversor"></section>
+  </main>
+  <script src="script.js"></script>
+</body>
 </html>
